; ModuleID = '/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstile_multihop.c_do_work.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/tests/extr_turnstile_multihop.c_do_work.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @do_work to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_work(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store volatile i32 3, i32* %3, align 4
  store volatile i32 2, i32* %4, align 4
  br label %6

6:                                                ; preds = %32, %1
  %7 = load volatile i32, i32* %4, align 4
  %8 = load i32, i32* %2, align 4
  %9 = icmp sle i32 %7, %8
  br i1 %9, label %10, label %35

10:                                               ; preds = %6
  store volatile i32 2, i32* %5, align 4
  br label %11

11:                                               ; preds = %22, %10
  %12 = load volatile i32, i32* %5, align 4
  %13 = load volatile i32, i32* %3, align 4
  %14 = icmp sle i32 %12, %13
  br i1 %14, label %15, label %25

15:                                               ; preds = %11
  %16 = load volatile i32, i32* %3, align 4
  %17 = load volatile i32, i32* %5, align 4
  %18 = srem i32 %16, %17
  %19 = icmp eq i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %15
  br label %25

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21
  %23 = load volatile i32, i32* %5, align 4
  %24 = add nsw i32 %23, 1
  store volatile i32 %24, i32* %5, align 4
  br label %11

25:                                               ; preds = %20, %11
  %26 = load volatile i32, i32* %5, align 4
  %27 = load volatile i32, i32* %3, align 4
  %28 = icmp eq i32 %26, %27
  br i1 %28, label %29, label %32

29:                                               ; preds = %25
  %30 = load volatile i32, i32* %4, align 4
  %31 = add nsw i32 %30, 1
  store volatile i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %29, %25
  %33 = load volatile i32, i32* %3, align 4
  %34 = add nsw i32 %33, 1
  store volatile i32 %34, i32* %3, align 4
  br label %6

35:                                               ; preds = %6
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
